--- a/style.css
+++ b/style.css
@@ -2,7 +2,33 @@
 box-sizing: border-box;
 }
 
-body{
+body {
 margin: 0;
 background-color: black;
+
+}
+
+header {
+border-bottom: 5px solid white;
+}
+
+h1 {
+color: white;
+font-size: 200px;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+h2 {
+color: white;
+font-size: 30px;
+font-family: Arial, Helvetica, sans-serif;
+border-top: 5px solid white; 
+border-bottom: 5px solid white;  
+}
+
+h3 {
+color: white;
+font-size: 30px;
+font-family: Arial, Helvetica, sans-serif;
+
 }
