--- a/style.css
+++ b/style.css
@@ -16,19 +16,37 @@ padding: 30px;
 
 h1 {
 color: white;
-font-size: 200px;
+font-size: 300px;
 font-family: Arial, Helvetica, sans-serif;
 padding: 30px;
-
+font-weight: bolder;
 }
 
 h2 {
 border-top: 2px solid white; 
 border-bottom: 2px solid white;
 color: white;
-font-size: 30px;
+font-size: 50px;
 font-family: Arial, Helvetica, sans-serif;
 padding: 30px;  
+}
+h3 {
+display: block;
+font-size: 2em;
+margin-block-start: 1em;
+margin-block-end: 1em;
+margin-inline-start: 0px;
+margin-inline-end: 0px;
+   
+}
+
+h4 {
+display: block;
+margin-block-start: 1.10em;
+margin-block-end: 1.10em;
+margin-inline-start: 0px;
+margin-inline-end: 0px;
+font-size: 2em;
 }
 
 .grid-container-paragraph {
@@ -40,7 +58,7 @@ padding: 30px;
 
 }
 
-.grid-container-h{
+.grid-container-h {
 color: white;
 display: grid;
 grid-template-columns: 1fr 1fr;
